Wrap with @at-root #{&} according to https://github.com/webpack-contrib/sass-loader/issues/351

--- a/src/main/resources/assets/css/pages/common/_common.scss
+++ b/src/main/resources/assets/css/pages/common/_common.scss
@@ -4,12 +4,12 @@
   @include page-header;
   @include page-footer;
 
-  &__body {
+  @at-root #{&}__body {
     display: flex;
     flex-direction: column;
   }
 
-  &__content {
+  @at-root #{&}__content {
     flex-grow: 1;
   }
 }
