--- a/src/main/resources/assets/css/pages/common/_menu.scss
+++ b/src/main/resources/assets/css/pages/common/_menu.scss
@@ -1,6 +1,6 @@
 @mixin page-menu {
 
-  &__main-menu {
+  @at-root #{&}__main-menu {
 
     width: 100%;
     height: 100%;
